Fixed spacing issue on small window

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,17 +21,14 @@ p {
   line-height: 18px;
   text-transform: uppercase; }
 
-.ru-live-video .main {
+.ru-live-video {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  align-items: center;
-  display: flex;
-  justify-content: center;
   min-height: 100vh;
   position: relative;
   z-index: 0; }
-  .ru-live-video .main::before {
+  .ru-live-video::before {
     background-color: rgba(0, 0, 0, 0.4);
     bottom: 0;
     content: '';
@@ -42,64 +39,68 @@ p {
     top: 0;
     width: 100%;
     z-index: 1; }
-.ru-live-video .wrapper {
-  padding: 32px 0;
-  position: relative;
-  width: 100%;
-  z-index: 2; }
-.ru-live-video .container {
-  padding: 0 16px; }
-.ru-live-video .video-container {
-  background-color: black;
-  border: 4px solid white;
-  height: 0;
-  padding-bottom: 56.25%;
-  position: relative; }
-  .ru-live-video .video-container iframe {
-    bottom: 0;
-    height: 100%;
-    left: 0;
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%; }
-.ru-live-video .body {
-  padding-top: 32px; }
-.ru-live-video .ru-logo-wrapper {
-  margin-bottom: 8px;
-  text-align: center; }
-  .ru-live-video .ru-logo-wrapper img {
-    max-width: 174px;
-    width: 100%; }
-.ru-live-video .description {
-  margin-bottom: 21px; }
-  .ru-live-video .description p {
-    margin: auto;
-    max-width: 330px;
-    text-align: center; }
-.ru-live-video .partners {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center; }
-.ru-live-video .image-wrapper {
-  max-width: 94px; }
-  .ru-live-video .image-wrapper img {
-    width: 100%; }
-@media only screen and (min-width: 768px) {
+  .ru-live-video .main {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    z-index: 2; }
   .ru-live-video .wrapper {
-    padding: 75px 0 104px;
+    padding: 32px 0;
     width: 100%; }
   .ru-live-video .container {
-    padding: 0 92px; }
-  .ru-live-video .video-wrapper {
-    margin: auto;
-    max-width: 100%; }
-  .ru-live-video .ru-logo-wrapper img {
-    max-width: 200px; }
+    padding: 0 16px; }
+  .ru-live-video .video-container {
+    background-color: black;
+    border: 4px solid white;
+    height: 0;
+    padding-bottom: 56.25%;
+    position: relative; }
+    .ru-live-video .video-container iframe {
+      bottom: 0;
+      height: 100%;
+      left: 0;
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 100%; }
+  .ru-live-video .body {
+    padding-top: 32px; }
+  .ru-live-video .ru-logo-wrapper {
+    margin-bottom: 8px;
+    text-align: center; }
+    .ru-live-video .ru-logo-wrapper img {
+      max-width: 174px;
+      width: 100%; }
   .ru-live-video .description {
-    margin-bottom: 24px; } }
-@media only screen and (min-width: 1440px) {
-  .ru-live-video .video-wrapper {
-    max-width: 1100px; } }
+    margin-bottom: 21px; }
+    .ru-live-video .description p {
+      margin: auto;
+      max-width: 330px;
+      text-align: center; }
+  .ru-live-video .partners {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; }
+  .ru-live-video .image-wrapper {
+    max-width: 94px; }
+    .ru-live-video .image-wrapper img {
+      width: 100%; }
+  @media only screen and (min-width: 768px) {
+    .ru-live-video .wrapper {
+      padding: 75px 0 104px;
+      width: 100%; }
+    .ru-live-video .container {
+      padding: 0 92px; }
+    .ru-live-video .video-wrapper {
+      margin: auto;
+      max-width: 100%; }
+    .ru-live-video .ru-logo-wrapper img {
+      max-width: 200px; }
+    .ru-live-video .description {
+      margin-bottom: 24px; } }
+  @media only screen and (min-width: 1440px) {
+    .ru-live-video .video-wrapper {
+      max-width: 1100px; } }
 
 /*# sourceMappingURL=style.css.map */
